# Sigmod2025

./: README.md
AMSkt-MPC/: CP.cpp  DP.cpp  新建 DOC 文档.doc
SIGMOD2025_cpp-main/: CMakeLists.txt  main.cpp
SIGMOD2025_cpp-main/AMSkt-MPC/: Makefile
SIGMOD2025_cpp-main/AMSkt-MPC/Auth/: Summer.d  fake-stuff.d
SIGMOD2025_cpp-main/AMSkt-MPC/FHE/: Ciphertext.d  FFT_Data.d  FHE_Keys.d  Matrix.d  P2Data.d  PPData.d  Plaintext.d  Ring.d
SIGMOD2025_cpp-main/AMSkt-MPC/FHEOffline/: FullSetup.d  Multiplier.d  SimpleEncCommit.d  SimpleGenerator.d  SimpleMachine.d  Verifier.d
SIGMOD2025_cpp-main/AMSkt-MPC/Math/: Setup.d  Share.d  gf2nlong.d
SIGMOD2025_cpp-main/AMSkt-MPC/Networking/: Player.d  Receiver.d  ServerSocket.d  sockets.d
SIGMOD2025_cpp-main/AMSkt-MPC/Processor/: Binary_File_IO.d  Data_Files.d  Machine.d  Memory.d  PrivateOutput.d  Program.d
SIGMOD2025_cpp-main/AMSkt-MPC/Protocol/: DataParty.d  MurmurHash3.d
SIGMOD2025_cpp-main/AMSkt-MPC/Tools/: Commit.d  Config.d  Signal.d  sha1.d
SIGMOD2025_cpp-main/Math/: Integer.d
SIGMOD2025_cpp-main/include/multiset/: AMSkt.h  CMSkt.h  multiset_test.h  rSkt.h  vSkt.h
SIGMOD2025_cpp-main/include/singleset/: FM.h  FMS.h  LLC.h  singleset_test.h
SIGMOD2025_cpp-main/include/utils/: Laplace.h  hadamardMatrix.h
SIGMOD2025_cpp-main/src/multiset/: AMSkt.cpp  CMSkt.cpp  CMakeLists.txt  multiset_test.cpp  mySkt.cpp  rSkt.cpp  vSkt.cpp
SIGMOD2025_cpp-main/src/singleset/: CMakeLists.txt  FM.cpp  FMS.cpp  LLC.cpp  singleset_test.cpp
SIGMOD2025_cpp-main/src/utils/: CMakeLists.txt  Laplace.cpp  MurmurHash3.cpp
(+60 files in other folders)
